--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -388,27 +388,37 @@ textarea {
     font-size: 16px;
   }
 
-  .dropdown-modal {
+.dropdown-modal {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: white;
     border: 1px solid #ccc;
-    padding: 20px;
+    padding: 25px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     display: none;
     z-index: 1000;
-  }
+}
 
-  .dropdown-modal input {
+.dropdown-modal input
+.dropdown-modal select {
     display: block;
     margin: 10px 0;
     padding: 5px;
-  }
+}
+.horaSelect{
+    width: 100%;
+    height: 30px;
+    border-radius: 5px;
+    font-size: 20px;
+}
+.horaSelect option{
+    font-size: 20px;
+}
 
-  .overlay {
+.overlay {
     position: absolute;
     top: 0;
     left: 0;
@@ -417,7 +427,7 @@ textarea {
     background-color: rgba(0,0,0,0.5);
     display: none;
     z-index: 999;
-  }
+}
 .containerAdmin {
     max-width: 1200px;
     margin: 0 auto;
